set(PROJECT_INCLUDE_PATHS "${PROJECT_INCLUDE_PATHS};${CMAKE_CURRENT_SOURCE_DIR}")
set(PROJECT_INCLUDE_PATHS "${PROJECT_INCLUDE_PATHS};${CMAKE_CURRENT_SOURCE_DIR}/ckr")
set(PROJECT_INCLUDE_PATHS "${PROJECT_INCLUDE_PATHS};${CMAKE_CURRENT_SOURCE_DIR}/cm")
set(PROJECT_INCLUDE_PATHS "${PROJECT_INCLUDE_PATHS};${CMAKE_CURRENT_SOURCE_DIR}/log")
set(PROJECT_INCLUDE_PATHS "${PROJECT_INCLUDE_PATHS};${CMAKE_CURRENT_SOURCE_DIR}/mm")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ckr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/cm)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/log)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mm)

set(PROJECT_INCLUDE_PATHS "${PROJECT_INCLUDE_PATHS}" PARENT_SCOPE)
set(PROJECT_LIBRARIES "${PROJECT_LIBRARIES}" PARENT_SCOPE)
